text change in index.html file

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>Rita Saad's Portfolio</title>
+	<title>Rita Saad</title>
 </head>
 <body>
-	<h1>Selected work</h1>
+	<h1>Hello World!</h1>
     <p>This is the my secret headquarters</p>
 </body>
 </html>
