--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div id="lander">
+	<div id="header">
         <nav>
             <a class="navlinks" href="#">home</a>
             <a class="navlinks" href="#">work</a>
